--- a/src/encuestas/hnk-encuesta-test-grp.html
+++ b/src/encuestas/hnk-encuesta-test-grp.html
@@ -48,7 +48,7 @@
             <h3>[[titulo]]</h3>
             <template is="dom-repeat" items="{{preguntas}}">
                 <hnk-encuesta-test-prg
-                        titulo="[[item.titulo]]"
+                        titulo="[[item.pregunta]]"
                         respuesta="{{item.respuesta}}"
                         respuestas="[[item.respuestas]]"
                         ></hnk-encuesta-test-prg>
