--- a/src/encuestas/hnk-encuesta.html
+++ b/src/encuestas/hnk-encuesta.html
@@ -20,19 +20,15 @@
 
         <h2 class="titulo">[[encuesta.usuario.nombre]]</h2>
 
-        <template is="dom-if" if="[[_igual(estado, 0)]]">
+        <template is="dom-if" if="[[_igual(vista, '')]]">
             <hnk-encuesta-form
-                    datos="{{encuesta.datos}}"
-                    on-comenzar="_onAvanzar"
-                    on-volver="_onVolver"
-                    ></hnk-encuesta-form>
+                datos="{{encuesta.datos}}"
+            ></hnk-encuesta-form>
         </template>
-        <template is="dom-if" if="[[_igual(estado, 1)]]">
+        <template is="dom-if" if="[[_igual(vista, '/test')]]">
             <hnk-encuesta-test
-                    encuesta="{{encuesta.encuesta}}"
-                    on-enviar="_onAvanzar"
-                    on-volver="_onVolver"
-                    ></hnk-encuesta-test>
+                encuesta="{{encuesta.test}}"
+            ></hnk-encuesta-test>
         </template>
 
     </template>
@@ -43,25 +39,13 @@
             is: 'hnk-encuesta',
             behaviors: [hnk.BaseBehavior],
             properties: {
-                estado: {
-                    type: Number,
-                    value: 0,
-                    readOnly: true
+                vista: {
+                    type: String,
+                    value: ''
                 },
                 encuesta: {
                     type: Object,
                     notify: true
-                }
-            },
-            _onAvanzar: function() {
-                this._setEstado(this.estado + 1);
-            },
-            _onVolver: function(e) {
-                e.stopPropagation();
-                if (this.estado) {
-                    this._setEstado(this.estado - 1);
-                } else {
-                    this.fire('volver');
                 }
             }
         });
