--- a/src/data-behaviors/hnk-data-encuesta-behavior.html
+++ b/src/data-behaviors/hnk-data-encuesta-behavior.html
@@ -14,7 +14,13 @@
             return {
                 usuario: usuario,
                 datos: {
-                    local: ''
+                    local: '',
+                    fechaCreacion: undefined,
+                    fechaDatos: undefined,
+                    fechaTest: undefined,
+                    fotoLocal: undefined,
+                    fotoTicket: undefined,
+                    localizacion: undefined
                 },
                 test: preguntas
             };
