--- a/src/pages/hnk-page.html
+++ b/src/pages/hnk-page.html
@@ -7,6 +7,9 @@
 <link rel="import" href="../app-layout/app-header/app-header.html">
 <link rel="import" href="../app-layout/app-scroll-effects/effects/waterfall.html">
 
+<link rel="import" href="../paper-dialog/paper-dialog.html">
+<link rel="import" href="../paper-spinner/paper-spinner.html">
+
 <link rel="import" href="hnk-menu.html">
 
 <link rel="import" href="../util/hnk-base.html">
@@ -47,6 +50,9 @@
                 width: 100%;
                 padding-right: 0;
             }
+            paper-dialog {
+                text-align: center;
+            }
         </style>
 
         <app-drawer-layout>
@@ -81,6 +87,14 @@
                 </div>
             </app-header-layout>
         </app-drawer-layout>
+        <paper-dialog
+                id="spinner"
+                modal
+                opened="[[mostrarSpinner]]"
+               >
+            <h3>CARGANDO...</h3>
+            <paper-spinner active="[[mostrarSpinner]]"></paper-spinner>
+        </paper-dialog>
 
     </template>
 
