--- a/src/pages/hnk-nuevaencuesta-page.html
+++ b/src/pages/hnk-nuevaencuesta-page.html
@@ -32,6 +32,7 @@
             url="[[urlEncuesta]]"
             content-type="application/json"
             body="[[encuesta]]"
+            loading="{{mostrarSpinner}}"
             on-response="_onResponseEncuesta"
         ></iron-ajax>
 
@@ -40,6 +41,7 @@
             url="[[urlPreguntas]]"
             content-type="application/json"
             last-response="{{preguntas}}"
+            loading="{{mostrarSpinner}}"
             auto
         ></iron-ajax>
 
@@ -54,7 +56,11 @@
                 encuesta: Object,
                 preguntas: Array,
                 urlEncuesta: String,
-                urlPreguntas: String
+                urlPreguntas: String,
+                mostrarSpinner: {
+                    type: Boolean,
+                    notify: true
+                }
             },
             observers: ['_observerEncuesta(usuario, preguntas)'],
             _observerEncuesta: function(usuario, preguntas) {
