--- a/src/encuestas/hnk-encuesta-form.html
+++ b/src/encuestas/hnk-encuesta-form.html
@@ -30,7 +30,7 @@
         <form is="iron-form" id="form" class="form" on-iron-form-submit="_onSubmit">
             <paper-input required name="local" label="Local" value="{{datos.local}}"></paper-input>
             <paper-button on-tap="_onVolver">Volver</paper-button>
-            <paper-button class="primary" on-tap="_onTap">Comenzar Test</paper-button>
+            <paper-button class="primary" on-tap="_onTap">comenzar Test</paper-button>
         </form>
 
     </template>
