--- a/src/pages/hnk-page.html
+++ b/src/pages/hnk-page.html
@@ -53,6 +53,10 @@
             paper-dialog {
                 text-align: center;
             }
+            h1 {
+                font-size: 1.2rem;
+                margin: 0;
+            }
         </style>
 
         <app-drawer-layout>
@@ -71,7 +75,7 @@
                                 <paper-icon-button icon="menu" drawer-toggle></paper-icon-button>
                                 <app-toolbar>
                                     <app-toolbar>
-                                        <div>Encuestas Heineken</div>
+                                        <h1>Encuestas Heineken</h1>
                                     </app-toolbar>
                                 </app-toolbar>
                             </app-toolbar>
