--- a/src/util/shared-styles.html
+++ b/src/util/shared-styles.html
@@ -41,6 +41,9 @@
         .hidden {
             display: none;
         }
+        .panel {
+            @apply(--mixin-panel);
+        }
     </style>
   </template>
 </dom-module>
