--- a/src/encuestas/hnk-encuesta-test.html
+++ b/src/encuestas/hnk-encuesta-test.html
@@ -32,7 +32,7 @@
                     preguntas="{{item.preguntas}}"
                 ></hnk-encuesta-test-grp>
             </template>
-            <paper-button on-tap="_onVolver">Volver</paper-button>
+            <paper-button on-tap="_onVolver">ver Datos</paper-button>
             <paper-button class="primary" on-tap="_onTap">Enviar</paper-button>
         </form>
 
