--- a/src/pages/hnk-encuestas-page.html
+++ b/src/pages/hnk-encuestas-page.html
@@ -5,7 +5,7 @@
 <link rel="import" href="../paper-menu/paper-menu.html">
 
 <link rel="import" href="hnk-page.html">
-<link rel="import" href="hnk-lista.html">
+<link rel="import" href="../ui/hnk-lista.html">
 
 <link rel="import" href="../util/hnk-base.html">
 <link rel="import" href="../util/hnk-config.html">
