--- a/src/util/shared-styles.html
+++ b/src/util/shared-styles.html
@@ -37,6 +37,10 @@
                 border-radius: 5px;
                 @apply(--mixin-fondo);
             };
+            --image-size: {
+                 width: 64px;
+                 height: 64px;
+            };
         }
         .hidden {
             display: none;
