--- a/src/data-behaviors/hnk-data-encuesta-behavior.html
+++ b/src/data-behaviors/hnk-data-encuesta-behavior.html
@@ -18,8 +18,8 @@
                     fechaCreacion: undefined,
                     fechaDatos: undefined,
                     fechaTest: undefined,
-                    fotoLocal: undefined,
-                    fotoTicket: undefined,
+                    fotoLocal: '',
+                    fotoTicket: '',
                     localizacion: undefined
                 },
                 test: preguntas
